<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.example.currencycoverterapp.presentation.ui.get_currencies_calculation.GetCurrenciesCalculationFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="32dp"
            tools:context="com.example.currencycoverterapp.presentation.get_currencies.GetCurrenciesFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".90" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.70" />

            <TextView
                android:id="@+id/tv_enteredAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/entered_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/currencies_calculation_amount_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tv_converted_Amount"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_converted_Amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/converted_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/currencies_calculation_amount_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/iv_timer"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_enteredAmount" />

            <Button
                android:id="@+id/btnConvert"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/imperialRed"
                android:text="@string/convert"
                app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/iv_timer" />

            <ImageView
                android:id="@+id/iv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_av_timer_48"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/tv_timer"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@id/tv_converted_Amount" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/currencies_calculation_amount_text_size"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/tv_sec_left"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/iv_timer"
                app:layout_constraintTop_toBottomOf="@+id/tv_converted_Amount" />

            <TextView
                android:id="@+id/tv_sec_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sec_left"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/currencies_calculation_amount_text_size"
                app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
                app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
                app:layout_constraintStart_toEndOf="@id/tv_timer"
                app:layout_constraintTop_toBottomOf="@+id/tv_converted_Amount" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>